--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,15 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div
+      id="root"
+      style="
+        padding-top: 200px;
+        padding-bottom: 200px;
+        padding-right: 200px;
+        padding-left: 200px;
+      "
+    ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -45,7 +53,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div id="app"></div>
+    <div id="drum-machine">
+      <div id="app"></div>
+    </div>
   </body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
